# RL-Isaac-palletizer

./: .gitignore  Makefile  README.md  eval.py  profile_sim.py  pyproject.toml  test_config.yaml  test_results.txt  train.py
algo/: ppo.py  storage.py  utils.py
assets/: EuroPalletH0_2.STL
configs/: base.yaml  rsl_rl_config.yaml
docs/: architecture.md  architecture_as_is.md
envs/: isaaclab_task.py  mask_dataset.py  pallet_task.py  vec_env_setup.py
legacy/: gen_mask_dataset.py  mockup_video.py  profile_sim.py
models/: actor_critic.py  encoder2d.py  policy_heads.py  rsl_rl_wrapper.py
pallet_rl/: __init__.py
pallet_rl/algo/: utils.py
pallet_rl/configs/: base.yaml  curriculum.py  rsl_rl_config.yaml
pallet_rl/envs/: __init__.py  action_adapter.py  buffer_logic.py  heightmap_channels.py  isaaclab_task.py  observation_builder.py  pallet_task.py  placement_controller.py  reward_manager.py  scene_builder.py
pallet_rl/envs/perception/: __init__.py  base.py  depth_camera_backend.py  warp_backend.py
pallet_rl/models/: __init__.py  actor_critic.py  encoder2d.py  place_only_policy.py  policy_heads.py  rsl_rl_wrapper.py  unet2d.py
pallet_rl/utils/: __init__.py  depth_heightmap.py  device_utils.py  heightmap_rasterizer.py  quaternions.py  usd_helpers.py
scripts/: diagnose_cuda.py  eval.py  eval_video_overview.py  gen_mask_dataset.py  mockup_video.py  mockup_video_physics.py  profile_sim.py  train.py
tests/: test_action_fix.py  test_action_space_cleaning.py  test_bugs.py  test_constraints.py  test_curriculum.py  test_decimation_semantics.py  test_depth_heightmap.py  test_imports.py  test_joint_action.py  test_modular.py  test_quaternions.py  test_reward_stagnation.py  test_termination_semantics.py
utils/: heightmap_rasterizer.py
