[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pallet_rl"
version = "0.1.0"
description = "RL for Palletizing with Isaac Lab"
authors = [{name = "Riccardo4", email = "quartoriccardo@gmail.com"}]
dependencies = [
    "torch",
    "gymnasium",
    "warp-lang",
    "pyyaml",
]

[tool.setuptools.packages.find]
include = ["pallet_rl*"]

[project.optional-dependencies]
# Training dependencies
# RSL-RL 3.x provides rsl_rl.modules.ActorCritic which we subclass.
# 4.x changes the API and is NOT compatible.
train = [
    "rsl-rl-lib>=3.2,<4",
]
# Extra dependencies used only by legacy utilities (CPU heightmap channels, etc.).
# These are not required for the main Isaac Lab + RSL-RL training/eval pipeline.
legacy = [
    "numpy",
    "scipy",
]
