[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pallet_rl"
version = "2.0.0"
description = "RL for Palletizing with Isaac Lab"
authors = [
    { name = "Riccardo4", email = "quartoriccardo@gmail.com" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    # Isaac Sim 5.0 / Isaac Lab 5.x runtime provides torch/torchvision and
    # related CUDA packages. We intentionally do NOT pin torch here to avoid
    # fighting the bundled Isaac environment.
    "gymnasium>=0.29",
    "pyyaml>=6.0",
    "numpy",
    # Work around the torch/_inductor typing crash seen with newer
    # typing_extensions on Python 3.11 in this runtime stack.
    "typing_extensions<4.12",
]

[tool.setuptools.packages.find]
include = ["pallet_rl*"]

[project.optional-dependencies]
train = [
    # Practical target for the current port on Isaac Sim 5.0.
    # Keep this on the 3.3 line first; do not jump to rsl-rl 5.x until the
    # repo is explicitly adapted and smoke-tested for that API.
    "rsl-rl-lib>=3.3,<3.4",
]

legacy = [
    "scipy",
]